--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   margin-bottom: 100px;
 }
 .head {
   text-align: center;
   margin-bottom: 50px;
-  width: 400px;
+  width: 375px;
 }
 .head h1 {
   text-transform: uppercase;
@@ -26,6 +26,9 @@
   margin-bottom: 0px;
   padding: 10px;
   text-align: left;
+  font-size: 0.8rem;
+  width: 300px;
+  margin: auto;
 }
 header {
   display: flex;
@@ -87,7 +90,7 @@ header span {
   position: absolute;
   top: 25%;
   left: 40%;
-  height: 100vh;
+  height: 50vh;
   z-index: 20;
   width: 100vw;
   margin: auto;
@@ -107,6 +110,9 @@ header span {
   cursor: pointer;
   color: rgb(221, 133, 150);
 }
+#hero .nav .nav-menu {
+  height: 400px;
+}
 #hero .hero {
   flex-direction: column;
   background-image: url("../images/undraw_programming_re_kg9v.svg");
@@ -115,7 +121,7 @@ header span {
 }
 #hero .hero::after {
   width: 100vw;
-  height: 100vh;
+  height: 200px;
   position: absolute;
   top: 0;
   content: "";
@@ -125,6 +131,7 @@ header span {
 }
 
 .hero .hero-text {
+  margin-top: 30px;
   z-index: 10;
   color: whitesmoke;
   margin-right: 100px;
@@ -205,8 +212,14 @@ header span {
   margin-bottom: 40px;
   /* border: 1px solid rgb(221, 133, 150); */
   position: relative;
-  width: 400px;
-  height: 250px;
+  width: 300px;
+  height: 200px;
+}
+#services .service .service-card p {
+  font-size: 0.7rem;
+}
+#services .service .service-card h2 {
+  font-size: 1rem;
 }
 #services .service .service-card::after {
   content: "";
@@ -247,14 +260,14 @@ header span {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
-  width: 400px;
+  margin-bottom: 30px;
+  width: 350px;
   position: relative;
   color: white;
 }
 #projects .project .item-card::after {
   content: "";
-  width: 100%;
+  width: 95%;
   height: 100%;
   background-color: black;
   position: absolute;
@@ -271,13 +284,14 @@ header span {
 #projects .project .project-info p {
   text-align: left;
   padding: 20px;
+  font-size: 0.8rem;
 }
 #projects .project .project-info h1 {
   padding-top: 10px auto;
 }
 #projects .project-image {
-  width: 400px;
-  height: 150px;
+  width: 330px;
+  height: 100px;
   overflow: hidden;
   position: relative;
 }
@@ -294,22 +308,23 @@ header span {
 /* about section  */
 #about .about {
   flex-direction: column-reverse;
-  width: 400px;
+  width: 350px;
   justify-content: center;
   text-align: left;
   margin: auto;
 }
 #about .about .about-image {
-  width: 100%;
-  height: 400px;
+  width: 350px;
   overflow: hidden;
-  flex-basis: 50%;
-  padding: 10px;
+  flex-basis: 40%;
+  padding: 0px;
   position: relative;
+  margin: auto;
+  height: 100px;
 }
 #about .about .about-image img {
-  width: 90%;
-  height: 500px;
+  width: 320px;
+  height: 400px;
   border-radius: 10px;
   margin-left: 15px;
   position: relative;
@@ -317,8 +332,8 @@ header span {
 }
 #about .about .about-image::after {
   content: " ";
-  width: 80%;
-  height: 100%;
+  width: 300px;
+  height: 350px;
   position: absolute;
   top: 5%;
   border: 10px solid rgb(221, 133, 150);
@@ -326,7 +341,7 @@ header span {
   z-index: 1;
 }
 #about .about .about-info {
-  width: 100%;
+  width: 330px;
   padding: 10px;
   margin-bottom: 40px;
 }
@@ -345,6 +360,7 @@ header span {
 }
 #about .about .about-info p {
   margin-bottom: 40px;
+  font-size: 0.8rem;
 }
 #about .about .about-info h1 {
   margin-bottom: 10px;
@@ -360,8 +376,8 @@ header span {
 }
 #contact .contact-card {
   box-shadow: 3px 5px 10px 1px #888888;
-  width: 350px;
-  height: 250px;
+  width: 330px;
+  height: 220px;
   margin-top: 50px;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -377,16 +393,19 @@ header span {
 #contact .contact-card .contact-info h1 {
   margin-bottom: 10px;
   color: rgb(88, 84, 84);
+  font-size: 1.2rem;
 }
 #contact .contact-card .contact-info h3 {
   color: grey;
+  font-size: 0.8rem;
 }
 #footer .footer {
   width: 100vw;
-  height: 200px;
+  height: 150px;
   background-color: rgb(221, 133, 150);
   margin-top: 30px;
   padding-top: 30px;
+  border-radius: 10px 10px 0px 0px;
 }
 #footer .footer-logo {
   color: white;
@@ -402,7 +421,7 @@ header span {
   color: crimson;
 }
 #footer .footer .footer-image {
-  width: 400px;
+  width: 300px;
   margin: auto;
   display: flex;
   align-items: center;
@@ -436,6 +455,26 @@ header span {
 /* media querries section  */
 @media screen and (min-width: 1200px) {
   /* header section design  */
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin-bottom: 100px;
+  }
+  .head {
+    text-align: center;
+    margin-bottom: 50px;
+    width: 400px;
+  }
+  .head p {
+    margin-bottom: 0px;
+    padding: 10px;
+    text-align: left;
+    font-size: 1.2rem;
+    width: auto;
+  }
   #hero .logo h1 {
     font-size: 3rem;
   }
@@ -450,6 +489,16 @@ header span {
     position: fixed;
     width: 100vw;
     z-index: 100;
+  }
+  #hero .hero::after {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    content: "";
+    background-color: black;
+    opacity: 0.7;
+    z-index: 1;
   }
   #hero .nav {
     position: relative;
@@ -559,17 +608,56 @@ header span {
     width: 62.5vw;
     flex-wrap: wrap;
     justify-content: space-between;
+    /* width: auto; */
   }
-  #projects .item-card {
-    width: 380px;
-    height: 400px;
+  #projects .project .item-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    width: 400px;
+    position: relative;
+    color: white;
+  }
+  #projects .project .item-card::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    opacity: 0.6;
+    border-radius: 10px;
+    z-index: 1;
   }
   #projects .item-card p {
     font-size: 1.2rem;
   }
+  #projects .project-image {
+    width: 400px;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+  }
   #projects .item-card h3 {
     font-size: 2rem;
   }
+  #projects .project .project-info p {
+    text-align: left;
+    padding: 20px;
+    font-size: 1rem;
+  }
+  #projects .project .project-info h1 {
+    padding-top: 10px auto;
+  }
+  #projects .project-image {
+    width: 400px;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+  }
+  /* About section design  */
   #about .about {
     flex-direction: row;
     width: 900px;
@@ -588,7 +676,17 @@ header span {
   }
   #about .about .about-image {
     width: 45%;
+    height: 50%;
   }
+  #about .about .about-image img {
+    width: 90%;
+    height: 420px;
+    border-radius: 10px;
+    margin-left: 15px;
+    position: relative;
+    z-index: 5;
+  }
+  /* contact section design  */
   #contact .contact {
     display: flex;
     flex-direction: row;
@@ -597,6 +695,20 @@ header span {
     justify-content: space-between;
     align-items: center;
     margin-top: 0px;
+  }
+  #contact .contact-card .contact-info {
+    padding: 10px 20px;
+    margin-top: 40px;
+    font-weight: 100;
+  }
+  #contact .contact-card .contact-info h1 {
+    margin-bottom: 10px;
+    color: rgb(88, 84, 84);
+    font-size: 1.5rem;
+  }
+  #contact .contact-card .contact-info h3 {
+    color: grey;
+    font-size: 1rem;
   }
   #footer .footer {
     display: flex;
@@ -607,5 +719,13 @@ header span {
   }
   #footer p {
     color: grey;
+  }
+  #footer .footer .footer-image {
+    width: 500px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
   }
 }
